# vk-search

./: .doit.db.db  .flake8  .gitignore  Pipfile  README.md  bot.py  dodo.py  limited_client.py  test_vk.py  vk_filters.py  vk_requests.py
docs/: conf.py  index.rst  techdoc.rst
docs/_build/doctrees/: environment.pickle  index.doctree  techdoc.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  techdoc.html
vksearch/: pyproject.toml
vksearch/bot/: __main__.py  bot.pot  vk_filters.py  vk_requests.py
vksearch/bot/po/ru/LC_MESSAGES/: bot.mo  bot.po
